Add new styles for buttons, tables, and input fields 🫡

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,269 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .primary-btn {
+    @apply rounded bg-[#22567E] py-2 px-6 text-sm font-semibold text-white shadow-lg transition-all duration-[0.5s] ease-in-out hover:bg-[#95D1CC] hover:text-black;
+  }
+  .table-btn {
+    @apply rounded-[3px] bg-[#95D1CC] p-2 transition-all duration-[0.3s] hover:bg-[#5584AC];
+  }
+  .btn-white {
+    @apply rounded-lg px-5 py-2 font-bold transition-all ease-in hover:bg-slate-100 hover:shadow-lg;
+  }
+  .comment-input {
+    @apply w-full rounded-lg border-none py-3 px-3 text-sm shadow-lg focus:ring-2 lg:w-[70%];
+  }
+  .table-th {
+    @apply px-4 py-4 text-left text-sm font-semibold text-gray-900;
+  }
+  .table-td {
+    @apply whitespace-nowrap px-4 py-4  text-sm font-medium text-gray-500;
+  }
+  .sidebar-routes {
+    @apply block py-3 pl-10 text-[18px] font-medium text-[#22577E] hover:text-[#5584AC];
+  }
+  .active {
+    @apply border-l-[5px] border-[#95D1CC] bg-[#22577E] text-white;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+#nprogress {
+  pointer-events: none;
+}
+#nprogress .bar {
+  background: rgb(4, 152, 238);
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+}
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #29d, 0 0 5px #29d;
+  opacity: 1;
+  -webkit-transform: rotate(3deg) translate(0, -4px);
+  -ms-transform: rotate(3deg) translate(0, -4px);
+  transform: rotate(3deg) translate(0, -4px);
+}
+#nprogress .spinner {
+  display: block;
+  position: fixed;
+  z-index: 1031;
+  top: 15px;
+  right: 15px;
+}
+#nprogress .spinner-icon {
+  width: 18px;
+  height: 18px;
+  box-sizing: border-box;
+  border: 2px solid transparent;
+  border-top-color: #29d;
+  border-left-color: #29d;
+  border-radius: 50%;
+  -webkit-animation: nprogress-spinner 400ms linear infinite;
+  animation: nprogress-spinner 400ms linear infinite;
+}
+.nprogress-custom-parent {
+  overflow: hidden;
+  position: relative;
+}
+.nprogress-custom-parent #nprogress .bar,
+.nprogress-custom-parent #nprogress .spinner {
+  position: absolute;
+}
+@-webkit-keyframes nprogress-spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
   }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes nprogress-spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.sidebar-scrollbar::-webkit-scrollbar {
+  width: 3px;
+}
+
+/* Track */
+.sidebar-scrollbar::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px;
+}
+
+#form {
+  background: rgba(0, 0, 0, 0.15);
+  padding: 0.25rem;
+  position: fixed;
+  bottom: 0;
+  left: 10;
+  right: 20;
+  display: flex;
+  height: 3rem;
+  box-sizing: border-box;
+  backdrop-filter: blur(10px);
+}
+#input {
+  border: none;
+  padding: 0 1rem;
+  flex-grow: 1;
+  border-radius: 2rem;
+  margin: 0.25rem;
+}
+#input:focus {
+  outline: none;
+}
+#form > button {
+  background: #333;
+  border: none;
+  padding: 0 1rem;
+  margin: 0.25rem;
+  border-radius: 3px;
+  outline: none;
+  color: #fff;
+}
+
+#messages {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#messages > li {
+  padding: 0.5rem 1rem;
+}
+#messages > li:nth-child(odd) {
+  background: #efefef;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+#theme {
+  display: none;
+}
+#theme:checked ~ * {
+  filter: invert(1);
+}
+
+.App {
+  width: 100%;
+  min-height: 100vh;
+  background: white;
+}
+
+.main {
+  max-width: 1000px;
+  width: 100%;
+  min-height: 100vh;
+  margin: auto;
+}
+
+img {
+  object-fit: cover;
+}
+
+/* -------- CHART ---------- */
+@import url("../styles/chart.css");
+
+/* -------- AUTH ---------- */
+@import url("../styles/auth.css");
+
+/* -------- LOADING ---------- */
+@import url("../styles/loading.css");
+
+/* -------- Header ---------- */
+@import url("../styles/header.css");
+
+/* -------- Avatar ---------- */
+@import url("../styles/avatar.css");
+
+/* -------- Header ---------- */
+@import url("../styles/header.css");
+
+/* -------- Profile ---------- */
+@import url("../styles/profile.css");
+
+/* -------- Home ---------- */
+@import url("../styles/home.css");
+
+/* -------- Status Modal ---------- */
+@import url("../styles/status_modal.css");
+
+/* -------- Comments ---------- */
+@import url("../styles/comments.css");
+
+/* -------- Post Thumb ---------- */
+@import url("../styles/post_thumb.css");
+
+/* -------- Message---------- */
+@import url("../styles/message.css");
+
+/* -------- Icons---------- */
+@import url("../styles/icons.css");
+
+/* -------- Call Modal---------- */
+@import url("../styles/call_modal.css");
+
+/* --------- Responsive ------ */
+@media (max-width: 766px) {
+  .header .navbar .logo {
+    display: none;
+  }
+  .header .menu {
+    width: 100%;
+    height: 40px;
+  }
+  .header .menu .navbar-nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .header .search_form {
+    width: 100%;
+  }
+  .header .logo {
+    margin: auto;
+  }
+  .header .logo h1 {
+    font-size: 1.5rem;
+  }
+
+  .message {
+    height: calc(100vh - 100px);
+  }
+  .right_mess,
+  .left_mess {
+    display: none;
+  }
+  .status {
+    padding: 20px 10px;
+  }
+}
+
+.mode {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
