--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
 
 @layer base {
   :root {
+    font-size: 15px;
+    line-height: 1.6;
+    font-family: "Inter", sans-serif;
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
